syntax = "proto3";

message ColumnSchema {
  string name = 1;
  enum ColumnType {
    UNDEFINED = 0;
    INTEGER = 1;
    UNSIGNED_INTEGER = 2;
  }
  ColumnType column_type = 2;
}

message TableSchema {
  /* required */ ColumnSchema key = 1;
  repeated ColumnSchema columns = 2;
}

message IndexSchema {
  /* required */ ColumnSchema key = 1;
}

message DatabaseSchema {
  /* required */ TableSchema table = 1;
  repeated IndexSchema secondary_indexes = 2;
}

message TableConfig {
  // The maximum size of each chunk on disk.
  /* required */ uint32 chunk_size = 1;

  // The amount of space remaining in a chunk to consider it full.
  /* required */ uint32 chunk_overflow_size = 2;
}
